--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Europe/Istanbul
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
@@ -42,9 +42,9 @@ social:
     - https://github.com/ahmetaraci # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/ahmet-araci/
 
-google_site_verification: # fill in to your verification string
+google_site_verification: vsiNnDQITqGW_JeY3sNgZ8bsqZUgG7chzC1T5XxpjuI
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
@@ -76,7 +76,7 @@ theme_mode: # [light | dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: /assets/img/avatar.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
