--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ google_site_verification: vsiNnDQITqGW_JeY3sNgZ8bsqZUgG7chzC1T5XxpjuI
 # The end of `jekyll-seo-tag` settings
 
 google_analytics:
-  id: # fill in your Google Analytics ID
+  id: G-YTRMVHHJDC
 
 goatcounter:
   id: # fill in your Goatcounter ID
