--- a/_config.yml
+++ b/_config.yml
@@ -202,3 +202,8 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+recaptcha:
+  site_key: "6LfFxPwpAAAAAHouB5B0jOItC9mQ9Xnuihi7tkt3"
+  secret_key: "6LfFxPwpAAAAABQM2A7m2Rt6pEqgoPDHjo65-SHI"
+  enabled: true # Set to false for development
