--- a/_config.yml
+++ b/_config.yml
@@ -205,5 +205,5 @@ jekyll-archives:
 
 recaptcha:
   site_key: "6LfFxPwpAAAAAHouB5B0jOItC9mQ9Xnuihi7tkt3"
-  secret_key: "6LfFxPwpAAAAABQM2A7m2Rt6pEqgoPDHjo65-SHI"
+  secret_key: "{{ secrets.recaptcha_secret_key }}"
   enabled: false # Set to false for development
