--- a/_config.yml
+++ b/_config.yml
@@ -206,3 +206,6 @@ recaptcha:
   site_key: "6LfFxPwpAAAAAHouB5B0jOItC9mQ9Xnuihi7tkt3"
   secret_key: "{{ secrets.recaptcha_secret_key }}"
   enabled: false # Set to false for development
+
+plugins:
+  - jekyll-sitemap
